almost there more placeholder live testing

--- a/config/mail_body_html.html
+++ b/config/mail_body_html.html
@@ -1,2 +1,7 @@
-<strong>Kedves vásárló!</strong><br>
-Cshaózlak!<br>
+<strong>Kedves [FIRST_NAME]!</strong><br>
+A BlitzWolf.Shop webáruházban leadott, [ORDER_ID]. számú rendelésedhez,<br>
+csatoltan mellékeljük az alábbi termékek használati útmútatóját:<br>
+[PRODUCT_LIST_HTML]
+<br>
+Üdvözlettel,<br>
+BlitzWolf.Shop
